fix: update /ping to use query params
