# docs/swagger.json
@@ -123,13 +123,14 @@
                 "summary": "ping",
                 "parameters": [
                     {
-                        "description": "input payload",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.PingBody"
-                        }
+                        "type": "string",
+                        "name": "echo",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "timeout",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -153,17 +154,6 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
-                }
-            }
-        },
-        "handlers.PingBody": {
-            "type": "object",
-            "properties": {
-                "echo": {
-                    "type": "string"
-                },
-                "timeout": {
-                    "type": "integer"
                 }
             }
         },
